# pedant-solver

./: .gitmodules  CMakeLists.txt  README.md
Certification/: DefinabilityChecker.py  certifyModel.py
aiger-1.9.9/: CMakeLists.txt
cadical_ipasir/: CMakeLists.txt  cadical.cc  cadical.h
certification/: Utils.py  certifyModel.py  checkModel.py  dqbf_parse.py  model_parser.py
certification/AIG2CNF/: AigerCnfConverter.cc  AigerCnfConverter.h  CMakeLists.txt
certification/AIG_Dependency_Checker/: AIGERDependencyChecker.cc  AIGERDependencyChecker.h  CMakeLists.txt
cmake/: FindAbc.cmake  FindAvy.cmake  FindInterpolatingSolver.cmake  FindMLPACK.cmake  FindMinisat.cmake  FindUniGen.cmake
glucose/: CMakeLists.txt  glucose-ipasir.h  glucose.cc
glucose/glucose/glucose_core/: BoundedQueue.h  Dimacs.h  Solver.cc  Solver.h  SolverStats.h  SolverTypes.h
glucose/glucose/glucose_mtl/: Alg.h  Alloc.h  Heap.h  Map.h  Queue.h  Sort.h  Vec.h  VecThreads.h
glucose/glucose/glucose_parallel/: ClausesBuffer.cc  ClausesBuffer.h  Main.cc  MultiSolvers.cc  MultiSolvers.h  ParallelSolver.cc  ParallelSolver.h  SharedCompanion.cc  SharedCompanion.h  SolverCompanion.cc  SolverCompanion.h  SolverConfiguration.cc
glucose/glucose/glucose_simp/: Main.cc  SimpSolver.cc  SimpSolver.h
glucose/glucose/glucose_utils/: Options.cc  Options.h  System.cc  System.h
include/: logging.h  satsolver.h  solver_generator.h  solvertypes.h  utils.h
interrupt/: CMakeLists.txt  interrupt.cc  interrupt.h
src/: AIGERDependencyChecker.cc  CMakeLists.txt  ITPsolver.cc  ITPsolver.h  argumentconstraint.h  buildAIGER.cc  buildAIGER.h  configuration.h  consistencychecker.cc  consistencychecker.h  defaultvaluecontainer.cc  defaultvaluecontainer.h  definabilitychecker.cc  definabilitychecker.h  definabilitychecker_bindings.cc  dependencycontainer.cc  dependencycontainer.h  dependencyextractor.cc  dependencyextractor.h  disjunction.h  dqdimacs.cc  dqdimacs.h  dqdimacs_parser.cc  dqdimacs_parser.h  dqdimacsparser.cc  dqdimacsparser.h  graphSeparator.cc  graphSeparator.h  hoeffdingDefaultTree.cc  hoeffdingDefaultTree.h  inputformula.h  learning.cc  learning.h  modellogger.cc  modellogger.h  pedant.cc  preprocessor.cc  preprocessor.h  simplevaliditychecker.cc  simplevaliditychecker.h  (+11 more)
utils/: CMakeLists.txt  utils_bindings.cc
